[gd_scene load_steps=2 format=3 uid="uid://djk8x2v5ym5bx"]

[ext_resource type="Script" path="res://scripts/chapter_scene.gd" id="1_chapter_scene"]

[node name="ChapterScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_chapter_scene")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.18, 0.28, 0.38, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -300.0
offset_right = 400.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Chapter Title"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ContentLabel" type="Label" parent="VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 18
text = "Chapter content will be displayed here."
autowrap_mode = 3

[node name="EducationalPoints" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Educational Points:
• Point 1
• Point 2
• Point 3"
autowrap_mode = 3

[node name="QuizButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Take Quiz"

[node name="NextButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Complete Chapter"
